@@ -1,3 +1,14 @@
+2014-08-12  Timothy Hatcher  <timothy@apple.com>
+
+        Web Inspector: Expect to see top level JavaScript function profiler details for event handlers in timeline
+        https://bugs.webkit.org/show_bug.cgi?id=132109
+
+        Reviewed by Joseph Pecoraro.
+
+        * UserInterface/Views/ScriptTimelineView.js:
+        (WebInspector.ScriptTimelineView.prototype._processPendingRecords): Don't promote root node children if
+        there is only one child.
+
 2014-08-11  Brian J. Burg  <burg@cs.washington.edu>
 
         Web Inspector: show a replay dashboard when capturing or replaying
